fixed overflow on mobile

--- a/styles/index.css
+++ b/styles/index.css
@@ -21,7 +21,6 @@ body {
    background-image: linear-gradient(var(--mainBg));
    color: var(--white);
    height: 100vh;
-   overflow: hidden;
 }
 
 .main-container {
